--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Link to profile</h1>
     <!-- Link to Profile Page -->
     <a href="profile.html">Go to Profile</a>
+    <h2> Link to CAMT</h2>
+    <a href="https://camt.cmu.ac.th/index.php/th/">Go to CAMT</a>
 </body>
 </html>
