--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="profile.html">Go to Profile</a>
     <h2> Link to CAMT</h2>
     <a href="https://camt.cmu.ac.th/index.php/th/">Go to CAMT</a>
+    <h3>Link to Mew's profile</h3>
+    <a href="kirana-profile.html">Mew</a>
 </body>
 </html>
