--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="https://camt.cmu.ac.th/index.php/th/">Go to CAMT</a>
     <h3>Link to Mew's profile</h3>
     <a href="kirana-profile.html">Mew</a>
+    <img src="kirana.png" height="100" width="100">
 </body>
 </html>
