--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Link to profile</h1>
     <!-- Link to Profile Page -->
     <a href="profile.html">Go to Profile</a>
+    <a href="profileJ.html">Go to Profile</a>
 </body>
 </html>
