--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <h1>Link to profile</h1>
     <!-- Link to Profile Page -->
     <a href="profile.html">Go to Profile</a>
-    <h2> Link to CAMT</h2>
+    <h1> Link to CAMT</h1>
     <a href="https://camt.cmu.ac.th/index.php/th/">Go to CAMT</a>
-    <h3>Link to Mew's profile</h3>
+    <h1>Link to Mew's profile</h1>
     <a href="kirana-profile.html">Mew</a>
     <img src="kirana.png" height="100" width="100">
+    <h1> link to jeng profile</h1>
     <a href="profileJ.html">Go to Profile</a>
 </body>
 </html>
