--- a/profileJ.html
+++ b/profileJ.html
@@ -14,7 +14,7 @@
         <p>Hi, I love Robux and gaming!</p>
     </section>
     <nav>
-        <a href="http://127.0.0.1:5500/index.html"><strong>[Home]</strong></a>
+        <a href="index.html"><strong>[Home]</strong></a>
     </nav>
 </body>
 </html>
